# ana-speksi

./: .gitignore  AGENTS.md  README.md  generate_workflow_diagram.py  pyproject.toml
.claude/: settings.json
.claude/skills/commit/: SKILL.md
ana-speksi/: config.yml
ana_speksi/: __init__.py  acceptance.py  cli.py  config.py  models.py  resources.py  skill_generator.py  status.py
ana_speksi/cli_commands/: _helpers.py  accept.py  continue_cmd.py  init.py  new.py  status.py  sync_counts.py  truth.py  update.py  what_to_code_next.py
ana_speksi/commands/: __init__.py  accept.py  codify.py  continue_cmd.py  debt_analysis.py  docufy.py  from_changes.py  init.py  new.py  one_shot.py  status.py  sync_counts.py  truth.py  update.py  what_to_code_next.py
ana_speksi/skills/as-accept/: SKILL.md
ana_speksi/skills/as-codify/: SKILL.md
ana_speksi/skills/as-continue/: SKILL.md
ana_speksi/skills/as-debt-analysis/: SKILL.md
ana_speksi/skills/as-docufy/: SKILL.md
ana_speksi/skills/as-extend/: SKILL.md
ana_speksi/skills/as-final-verdict/: SKILL.md
ana_speksi/skills/as-from-changes/: SKILL.md
ana_speksi/skills/as-new/: SKILL.md
ana_speksi/skills/as-one-shot/: SKILL.md
ana_speksi/skills/as-status/: SKILL.md
bas_spec/: __init__.py  cli.py  config.py  models.py  resources.py  skill_generator.py  status.py
bas_spec/commands/: __init__.py  accept.py  codify.py  continue_cmd.py  debt_analysis.py  docufy.py  from_changes.py  init.py  jira_create_story.py  jira_stories.py  jira_update_story.py  new.py  one_shot.py  status.py  truth.py  update.py
(+47 files in other folders)
